Revert "footer stye done responsiv ok **** onlu marquee style pandding"
This reverts commit 6ddea90ec9bafbbe19b93b8a26344085052fb623.

--- a/style.css
+++ b/style.css
@@ -63,8 +63,7 @@ praimary style
 header,
 .curriculum,
 .storiesSect,
-.footerItmes
-{
+.footerItmes {
   max-width: 1160px;
   margin: 0 auto;
   
@@ -495,7 +494,6 @@ footer{
   padding-top: 23px;
   padding-bottom: 32px;
   margin-top: 0;
-  
 }
 }
 /* footer end */
